--- a/Styles.css
+++ b/Styles.css
@@ -79,7 +79,7 @@ header {
 
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
   gap: 20px;
   padding: 20px;
   margin: 20px auto;
@@ -89,19 +89,33 @@ header {
 }
 
 .card {
-  width: 120px;
-  height: 180px;
+  
+  margin-left:22%;
+  width: 160px;
+  height: 220px;
   border: 2px solid #f1ebf7;
   border-radius: 10px; 
   background-color: #fff;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
 }
 
+.card-Text {
+  margin: 2px 5px; /* 10px arriba, 20px derecha, 30px abajo, 40px izquierda */
+  font-size: 0.9rem;
+}
+.card-SubText
+{
+  margin: 10px 5px;
+  font-family: 'Pompiere';
+  font-size: 1rem;
+
+}
+
 .inner-card {
   margin-top: 15px;
-  width: 90px;
-  height: 90px;
-  border: 2px solid #f1ebf7;
+  width: 100px;
+  height: 100px;
+  border: 2px solid #cbcbcb;
   border-radius: 8px;
 }
 
@@ -209,12 +223,14 @@ footer .tree {
 
   .grid-container {
     gap: 20px;
+    align-items: center;
+    justify-content: center;
   }
 
   .card {
-    margin-left:8px;
-    width: 120px;
-    height: 170px;
+    margin-left:22%;
+    width: 160px;
+    height: 220px;
   }
 
   footer .tree {
@@ -224,7 +240,7 @@ footer .tree {
   .grid-header {
     gap: 20px;
     padding: 20px; 
-    margin: 50px auto -35px; 
+    margin: 50px auto -32px; 
     width: 90%;
     max-width: 768px;
     height: 20px;
