--- a/Styles.css
+++ b/Styles.css
@@ -120,7 +120,7 @@ header {
 }
 
 footer .tree {
-  width: 200px;
+  width: 300px;
   height: auto;
   margin: 20px auto;
 }
@@ -229,9 +229,31 @@ footer .tree {
 
   .card {
     margin-left:22%;
-    width: 160px;
-    height: 220px;
+    width: 180px;
+    height: 240px;
   }
+
+  
+.card-Text {
+  margin: 1px 5px; /* 10px arriba, 20px derecha, 30px abajo, 40px izquierda */
+  font-size: 1.2rem;
+}
+.card-SubText
+{
+  margin: 10px 5px;
+  font-family: 'Pompiere';
+  font-size: 1.2rem;
+
+}
+
+.inner-card {
+  margin-top: 15px;
+  width: 120px;
+  height: 120px;
+  border: 2px solid #cbcbcb;
+  border-radius: 8px;
+}
+
 
   footer .tree {
     width: 80px;
@@ -254,6 +276,7 @@ footer .tree {
     color: #fff;
     text-align: left;
   }
+  
 }
 
 @media (max-width: 480px) {
