--- a/Styles.css
+++ b/Styles.css
@@ -85,12 +85,12 @@ header {
   margin: 20px auto;
   width: 90%;
   max-width: 850px;
+  border-radius: 0.5%;
   background-color: rgba(255, 255, 255, 0.5);
 }
 
 .card {
-  
-  margin-left:22%;
+  margin-left: 22%;
   width: 160px;
   height: 220px;
   border: 2px solid #f1ebf7;
@@ -103,19 +103,18 @@ header {
   margin: 2px 5px; /* 10px arriba, 20px derecha, 30px abajo, 40px izquierda */
   font-size: 0.9rem;
 }
-.card-SubText
-{
+
+.card-SubText {
   margin: 10px 5px;
   font-family: 'Pompiere';
   font-size: 1rem;
-
 }
 
 .inner-card {
   margin-top: 15px;
   width: 100px;
   height: 100px;
-  border: 2px solid #cbcbcb;
+  border: 2px solid white;
   border-radius: 8px;
 }
 
@@ -201,7 +200,6 @@ footer .tree {
   animation-duration: 15s;
 }
 
-
 /* Media Queries para Responsividad */
 @media (max-width: 768px) {
   header {
@@ -216,7 +214,6 @@ footer .tree {
   }
 
   .avatar img {
-    
     margin-top: -40px;
     width: 150px;
   }
@@ -228,32 +225,29 @@ footer .tree {
   }
 
   .card {
-    margin-left:22%;
+    margin-left: 18*%;
     width: 180px;
     height: 240px;
   }
 
-  
-.card-Text {
-  margin: 1px 5px; /* 10px arriba, 20px derecha, 30px abajo, 40px izquierda */
-  font-size: 1.2rem;
-}
-.card-SubText
-{
-  margin: 10px 5px;
-  font-family: 'Pompiere';
-  font-size: 1.2rem;
+  .card-Text {
+    margin: 1px 5px; /* 10px arriba, 20px derecha, 30px abajo, 40px izquierda */
+    font-size: 1.2rem;
+  }
 
-}
+  .card-SubText {
+    margin: 10px 5px;
+    font-family: 'Pompiere';
+    font-size: 1.2rem;
+  }
 
-.inner-card {
-  margin-top: 15px;
-  width: 120px;
-  height: 120px;
-  border: 2px solid #cbcbcb;
-  border-radius: 8px;
-}
-
+  .inner-card {
+    margin-top: 15px;
+    width: 120px;
+    height: 120px;
+    border: 2px solid #cbcbcb;
+    border-radius: 8px;
+  }
 
   footer .tree {
     width: 80px;
@@ -270,13 +264,13 @@ footer .tree {
     background-size: contain;
     background-repeat: no-repeat;
   }
+
   .grid-header-text {
     margin-top: -22px;
     font-size: 0.7rem;
     color: #fff;
     text-align: left;
   }
-  
 }
 
 @media (max-width: 480px) {
