--- a/Styles.css
+++ b/Styles.css
@@ -203,7 +203,7 @@ footer .tree {
 /* Media Queries para Responsividad */
 @media (max-width: 768px) {
   header {
-    margin-top: 60px;
+    margin-top: 80px;
   }
 
   .header-container h1 {
@@ -223,9 +223,8 @@ footer .tree {
     align-items: center;
     justify-content: center;
   }
-
   .card {
-    margin-left: 18*%;
+    margin-left: 18%;
     width: 180px;
     height: 240px;
   }
@@ -256,18 +255,18 @@ footer .tree {
   .grid-header {
     gap: 20px;
     padding: 20px; 
-    margin: 50px auto -32px; 
+    margin: 50px auto -18px; 
     width: 90%;
     max-width: 768px;
     height: 20px;
-    background-image: url("assets/divHeader3.png");
-    background-size: contain;
+    background-image: url("assets/divHeader4.png");
+    background-size: cover;
     background-repeat: no-repeat;
   }
 
   .grid-header-text {
-    margin-top: -22px;
-    font-size: 0.7rem;
+    margin-top: -15px;
+    font-size: 1.3rem;
     color: #fff;
     text-align: left;
   }
@@ -275,14 +274,28 @@ footer .tree {
 
 @media (max-width: 480px) {
   .header-container h1 {
-    font-size: 2rem;
+    font-size: 2.5rem;
   }
 
   .nav-title {
-    font-size: 14px;
+    font-size: 20px;
   }
 
   .grid-header-text {
+    margin-top: -22px;
     font-size: 1.2rem;
+    color: #fff;
+    text-align: left;
+  }
+  .grid-header {
+    gap: 20px;
+    padding: 20px; 
+    margin: 50px auto -32px; 
+    width: 90%;
+    max-width: 480%;
+    height: 20px;
+    background-image: url("assets/divHeader4.png");
+    background-size: contain;
+    background-repeat: no-repeat;
   }
 }
